--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -120,4 +120,9 @@
 <a href="/Deutschland">Deutschland</a><br>
 <img src="https://www.nicolos-reiseblog.de/frankreich-sehenswuerdigkeiten/">
 
+<form method="POST" action="/reise_speichern">
+ 
+  <button type="submit">Reise speichern</button>
+</form>
+
 {% endblock %}
