--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -74,6 +74,8 @@
   <button type="submit">Reise speichern</button>
 </form>
 
+<button type="submit" class="btn btn-primary">Hinzufügen</button>
+
 {% if success_message %}
     <div style="background-color: #d4edda; color: #155724; padding: 10px; margin-bottom: 20px; border: 1px solid #c3e6cb; border-radius: 5px;">
         {{ success_message }}
