--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -21,11 +21,11 @@
   <label for="ziel">Reiseziel:</label>
   <select name="ziel" id="ziel" required>
     <option value="" disabled selected>Bitte auswählen</option>
-    <option value="Italien">Italien</option>
-    <option value="Frankreich">Frankreich</option>
-    <option value="Spanien">Spanien</option>
-    <option value="Deutschland">Deutschland</option>
-    <option value="Portugal">Portugal</option>
+    <option value="3">Italien</option>
+    <option value="1">Frankreich</option>
+    <option value="4">Spanien</option>
+    <option value="2">Deutschland</option>
+    <option value="7">Portugal</option>
   </select>
 
   <!-- Budget Hotels -->
