--- a/templates/trip_detail.html
+++ b/templates/trip_detail.html
@@ -1,12 +1,12 @@
 <h1>Reise Details</h1>
 
 <ul>
-    <li>Reiseziel ID: {{ trip.reiseziel_id }}</li>
-    <li>Startdatum: {{ trip.startdatum }}</li>
-    <li>Enddatum: {{ trip.enddatum }}</li>
-    <li>Transport: {{ trip.transport }}</li>
-    <li>Hotel Budget: {{ trip.hotel_budget }}</li>
-    <li>Restaurant Budget: {{ trip.restaurant_budget }}</li>
+    <li>Reiseziel ID: {{ trip[2] }}</li>
+    <li>Startdatum: {{ trip[3] }}</li>
+    <li>Enddatum: {{ trip[4] }}</li>
+    <li>Transport: {{ trip[5] }}</li>
+    <li>Hotel Budget: {{ trip[6] }}</li>
+    <li>Restaurant Budget: {{ trip[7] }}</li>
 </ul>
 
 <a href="{{ url_for('index') }}">Zurück</a>
