--- a/templates/trip_detail.html
+++ b/templates/trip_detail.html
@@ -1,12 +1,15 @@
+{% extends "base.html" %}
+{% block content %}
 <h1>Reise Details</h1>
 
 <ul>
-    <li>Reiseziel ID: {{ trip[2] }}</li>
-    <li>Startdatum: {{ trip[3] }}</li>
-    <li>Enddatum: {{ trip[4] }}</li>
-    <li>Transport: {{ trip[5] }}</li>
-    <li>Hotel Budget: {{ trip[6] }}</li>
-    <li>Restaurant Budget: {{ trip[7] }}</li>
+    <li><strong>Reiseziel:</strong> {{ trip[0] }}</li>
+    <li><strong>Startdatum:</strong> {{ trip[1] }}</li>
+    <li><strong>Enddatum:</strong> {{ trip[2] }}</li>
+    <li><strong>Transport:</strong> {{ trip[3] }}</li>
+    <li><strong>Hotel Budget:</strong> {{ trip[4] }} €</li>
+    <li><strong>Restaurant Budget:</strong> {{ trip[5] }} €</li>
 </ul>
 
-<a href="{{ url_for('index') }}">Zurück</a>
+<a href="{{ url_for('index') }}" class="btn btn-default">Zurück zur Übersicht</a>
+{% endblock %}
