--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,8 @@
          
            <a class ="navbar-brand" href="/">Home</a>
       
-          <a class = "navbar-brand" href="/add_trip">Reise planen</a>      
+          <a class = "navbar-brand" href="/add_trip">Reise planen</a>    
+          <a class = "navbar-brand" href="/trip_detail">Reise anzeigen</a>
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
