--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -20,15 +20,16 @@
 <form method="POST" action="{{ url_for('add_trip') }}">
   
   <!-- Reiseziel -->
- <label for="ziel">Reiseziel:</label>
+<label for="ziel">Reiseziel:</label>
 <select name="ziel" id="ziel" required>
   <option value="" disabled selected>Bitte auswählen</option>
   {% for ziel in ziele %}
-    <option value="{{ ziel[0] }}">
-      {{ ziel[1] }} ({{ ziel[2] }})
+    <option value="{{ ziel['id'] }}">
+      {{ ziel['name'] }} ({{ ziel['land'] }})
     </option>
   {% endfor %}
 </select>
+
 
   <!-- Budget Hotels -->
   <label for="hotel_budget">Budget Hotels (€):</label>
