--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -66,13 +66,13 @@
   <input type="date" id="enddatum" name="enddatum" required>
 
   <!-- Interessen -->
-  <label>Interessen:</label>
-  <select name="interesse" id="interesse" required>
-  <option value="" disabled selected>Bitte auswählen</option>
-  {% for i in interessen %}
-    <option value="{{ i['interessen'] }}">{{ i['interessen'] }}</option>
-  {% endfor %}
-</select>
+  <label for="interesse">Interesse:</label>
+    <select name="interesse" id="interesse">
+        {% for item in interessen %}
+            <option value="{{ item.interessen }}">{{ item.interessen }}</option>
+        {% endfor %}
+    </select>
+
 
   <button type="submit" class="btn btn-primary">Hinzufügen</button>
   
