--- a/templates/trip_detail.html
+++ b/templates/trip_detail.html
@@ -2,6 +2,64 @@
 {% block content %}
 <h1>Reise Details</h1>
 
+<head>
+    <meta charset="UTF-8">
+    <title>Reisedetails</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid #ccc;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        tbody tr:nth-child(even) {
+            background-color: #fafafa;
+        }
+    </style>
+</head>
+<body>
+    <h1>Meine Reisen</h1>
+
+    {% if reisen %}
+        <table>
+            <thead>
+                <tr>
+                    <th>Reiseziel</th>
+                    <th>Startdatum</th>
+                    <th>Enddatum</th>
+                    <th>Transportmittel</th>
+                    <th>Hotelbudget</th>
+                    <th>Restaurantbudget</th>
+                    <th>Interesse</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for reise in reisen %}
+                    <tr>
+                        <td>{{ reise.reiseziel_id }}</td>
+                        <td>{{ reise.startdatum }}</td>
+                        <td>{{ reise.enddatum }}</td>
+                        <td>{{ reise.transport }}</td>
+                        <td>{{ reise.hotel_budget }}</td>
+                        <td>{{ reise.restaurant_budget }}</td>
+                        <td>{{ reise.interesse }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% else %}
+        <p>Es wurden keine Reisen gefunden.</p>
+    {% endif %}
+</body>
+</html>
+
 
 
 
